--- a/esstoolkit/explorer/ui_Explorer.ui
+++ b/esstoolkit/explorer/ui_Explorer.ui
@@ -78,28 +78,7 @@
            <number>0</number>
           </property>
           <item row="0" column="1">
-           <widget class="QComboBox" name="colourRangeCombo">
-            <item>
-             <property name="text">
-              <string>Classic</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Red - Blue</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Greyscale</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Monchrome</string>
-             </property>
-            </item>
-           </widget>
+           <widget class="QComboBox" name="colourRangeCombo"/>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="colourRangeLabel">
@@ -173,28 +152,7 @@
            </widget>
           </item>
           <item row="0" column="2">
-           <widget class="QComboBox" name="intervalTypeCombo">
-            <item>
-             <property name="text">
-              <string>Equal interval</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Quantiles</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Natural breaks</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Custom</string>
-             </property>
-            </item>
-           </widget>
+           <widget class="QComboBox" name="intervalTypeCombo"/>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="topLimitLabel">
