--- a/esstoolkit/analysis/ui_DepthmapAdvanced.ui
+++ b/esstoolkit/analysis/ui_DepthmapAdvanced.ui
@@ -20,6 +20,32 @@
    <string>Advanced Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" columnstretch="0,1" columnminimumwidth="0,1">
+   <item row="1" column="0" colspan="2">
+    <widget class="QCheckBox" name="axialCalculateChoiceCheck">
+     <property name="text">
+      <string>Calculate choice</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QComboBox" name="axialDistanceCombo">
+     <item>
+      <property name="text">
+       <string>Topological</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Angular</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Metric</string>
+      </property>
+     </item>
+    </widget>
+   </item>
    <item row="0" column="0" colspan="2">
     <widget class="QCheckBox" name="axialCalculateFullCheck">
      <property name="text">
@@ -27,10 +53,13 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QCheckBox" name="axialCalculateChoiceCheck">
-     <property name="text">
-      <string>Calculate choice</string>
+   <item row="6" column="0" colspan="2">
+    <widget class="QDialogButtonBox" name="closeButtonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -48,8 +77,8 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QComboBox" name="axialDistanceCombo">
+   <item row="4" column="1">
+    <widget class="QComboBox" name="axialRadiusCombo">
      <item>
       <property name="text">
        <string>Topological</string>
@@ -74,32 +103,17 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
-    <widget class="QComboBox" name="axialRadiusCombo">
-     <item>
-      <property name="text">
-       <string>Topological</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Angular</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>Metric</string>
-      </property>
-     </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="axialStubsLabel">
+     <property name="text">
+      <string>Stubs removal %:</string>
+     </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
-    <widget class="QDialogButtonBox" name="closeButtonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   <item row="5" column="1">
+    <widget class="QLineEdit" name="axialStubsEdit">
+     <property name="placeholderText">
+      <string/>
      </property>
     </widget>
    </item>
