fixes to analysis dialog
properly deal with read and write settings
improve what gets cleared with user interaction

--- a/esstoolkit/analysis/ui_Analysis.ui
+++ b/esstoolkit/analysis/ui_Analysis.ui
@@ -35,6 +35,9 @@
       </item>
       <item>
        <widget class="QLineEdit" name="analysisDataEdit">
+        <property name="text">
+         <string>specify for storing analysis results</string>
+        </property>
         <property name="frame">
          <bool>false</bool>
         </property>
