--- a/esstoolkit/ui_Settings.ui
+++ b/esstoolkit/ui_Settings.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>SettingsDialog</class>
  <widget class="QDialog" name="SettingsDialog">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
