--- a/esstoolkit/analysis/ui_Analysis.ui
+++ b/esstoolkit/analysis/ui_Analysis.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>395</width>
+    <width>390</width>
     <height>550</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>395</width>
+    <width>390</width>
     <height>550</height>
    </size>
   </property>
@@ -73,30 +73,28 @@
        <attribute name="title">
         <string>Map</string>
        </attribute>
-       <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,4">
-        <property name="leftMargin">
-         <number>12</number>
-        </property>
-        <property name="rightMargin">
-         <number>12</number>
-        </property>
-        <property name="bottomMargin">
-         <number>12</number>
-        </property>
-        <item>
+       <layout class="QGridLayout" name="gridLayout" columnstretch="0,1">
+        <item row="0" column="0">
          <widget class="QLabel" name="analysisMapLabel">
           <property name="text">
            <string>Layer</string>
           </property>
          </widget>
         </item>
-        <item>
+        <item row="0" column="1">
          <widget class="QComboBox" name="analysisMapCombo">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="2">
+         <widget class="QCheckBox" name="analysisMapSegmentCheck">
+          <property name="text">
+           <string>Segment map or road centre line</string>
           </property>
          </widget>
         </item>
