--- a/esstoolkit/resources.qrc
+++ b/esstoolkit/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="/plugins/esstoolkit/">
+  <qresource prefix="/">
     <file>icons/about.png</file>
     <file>icons/esst_graph.png</file>
     <file>icons/esst_explorer.png</file>
