--- a/esstoolkit/resources.qrc
+++ b/esstoolkit/resources.qrc
@@ -5,7 +5,7 @@
     <file>icons/esst_explorer.png</file>
     <file>icons/help.png</file>
     <file>icons/esst_logo.png</file>
-    <file>icons/ucl.png</file>
+    <file>icons/contrib_logos.png</file>
     <file>icons/project.png</file>
     <file>icons/settings.png</file>
     <file>icons/gate_transformer.png</file>
