--- a/esstoolkit/network_segmenter/network_segmenter_dialog_base.ui
+++ b/esstoolkit/network_segmenter/network_segmenter_dialog_base.ui
@@ -39,6 +39,12 @@
      </property>
      <item row="11" column="0">
       <widget class="QRadioButton" name="memoryRadioButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>memory</string>
        </property>
@@ -54,7 +60,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>70</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
@@ -86,7 +92,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>70</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
@@ -107,6 +113,12 @@
      </item>
      <item row="11" column="1">
       <widget class="QRadioButton" name="shpRadioButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>shapefile</string>
        </property>
@@ -153,6 +165,12 @@
      </item>
      <item row="11" column="2">
       <widget class="QRadioButton" name="postgisRadioButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>PostGIS</string>
        </property>
@@ -190,7 +208,7 @@
        </property>
        <property name="maximumSize">
         <size>
-         <width>70</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
@@ -228,9 +246,15 @@
      </item>
      <item row="5" column="2">
       <widget class="QSpinBox" name="stubsSpin">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>70</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
